[gd_scene load_steps=4 format=3 uid="uid://tetnkmhs2l60"]

[ext_resource type="PackedScene" uid="uid://bdh05d3fan0h3" path="res://Scenes/Playable/equip_item.tscn" id="1_2wmvw"]
[ext_resource type="Script" path="res://scripts/equip_screen.gd" id="1_il0yl"]
[ext_resource type="PackedScene" uid="uid://c7euusov16rvy" path="res://Scenes/Playable/equipped_item.tscn" id="2_orlww"]

[node name="EquipScreen" type="CanvasLayer"]
script = ExtResource("1_il0yl")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="EquippedItem1" parent="Control/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_orlww")]
layout_mode = 2
metadata/ID = -1

[node name="EquippedItem2" parent="Control/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_orlww")]
layout_mode = 2
metadata/ID = -1

[node name="EquippedItem3" parent="Control/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_orlww")]
layout_mode = 2
metadata/ID = -1

[node name="EquippedItem4" parent="Control/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_orlww")]
layout_mode = 2
metadata/ID = -1

[node name="EquippedItem5" parent="Control/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_orlww")]
layout_mode = 2
metadata/ID = -1

[node name="MarginContainer3" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="EquipButton" type="Button" parent="Control/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Equip/Unequip
"

[node name="CancelButton" type="Button" parent="Control/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel
"

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 420)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="LastPageButton" type="Button" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "<
Last
Page"

[node name="ItemContainer" type="VBoxContainer" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="ItemsFirstRow" type="HBoxContainer" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="EquipItem1" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsFirstRow" instance=ExtResource("1_2wmvw")]
layout_mode = 2

[node name="EquipItem2" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsFirstRow" instance=ExtResource("1_2wmvw")]
layout_mode = 2
metadata/ID = 1

[node name="EquipItem3" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsFirstRow" instance=ExtResource("1_2wmvw")]
layout_mode = 2
metadata/ID = 2

[node name="EquipItem4" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsFirstRow" instance=ExtResource("1_2wmvw")]
layout_mode = 2
metadata/ID = 3

[node name="EquipItem5" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsFirstRow" instance=ExtResource("1_2wmvw")]
layout_mode = 2
metadata/ID = 4

[node name="ItemsSecondRow" type="HBoxContainer" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="EquipItem6" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsSecondRow" instance=ExtResource("1_2wmvw")]
layout_mode = 2
metadata/ID = 5

[node name="EquipItem7" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsSecondRow" instance=ExtResource("1_2wmvw")]
layout_mode = 2
metadata/ID = 6

[node name="EquipItem8" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsSecondRow" instance=ExtResource("1_2wmvw")]
layout_mode = 2
metadata/ID = 7

[node name="EquipItem9" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsSecondRow" instance=ExtResource("1_2wmvw")]
layout_mode = 2
metadata/ID = 8

[node name="EquipItem10" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsSecondRow" instance=ExtResource("1_2wmvw")]
layout_mode = 2
metadata/ID = 9

[node name="NextPageButton" type="Button" parent="Control/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = ">
Next
Page"

[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer/HBoxContainer/EquippedItem1" to="." method="_on_equipped_item_selected_item"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer/HBoxContainer/EquippedItem2" to="." method="_on_equipped_item_selected_item"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer/HBoxContainer/EquippedItem3" to="." method="_on_equipped_item_selected_item"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer/HBoxContainer/EquippedItem4" to="." method="_on_equipped_item_selected_item"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer/HBoxContainer/EquippedItem5" to="." method="_on_equipped_item_selected_item"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer3/HBoxContainer/EquipButton" to="." method="_on_equip_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer3/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer2/HBoxContainer/LastPageButton" to="." method="_on_last_page_button_pressed"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsFirstRow/EquipItem1" to="." method="_on_equip_item_selected_item"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsFirstRow/EquipItem2" to="." method="_on_equip_item_selected_item"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsFirstRow/EquipItem3" to="." method="_on_equip_item_selected_item"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsFirstRow/EquipItem4" to="." method="_on_equip_item_selected_item"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsFirstRow/EquipItem5" to="." method="_on_equip_item_selected_item"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsSecondRow/EquipItem6" to="." method="_on_equip_item_selected_item"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsSecondRow/EquipItem7" to="." method="_on_equip_item_selected_item"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsSecondRow/EquipItem8" to="." method="_on_equip_item_selected_item"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsSecondRow/EquipItem9" to="." method="_on_equip_item_selected_item"]
[connection signal="selected_item" from="Control/VBoxContainer/MarginContainer2/HBoxContainer/ItemContainer/ItemsSecondRow/EquipItem10" to="." method="_on_equip_item_selected_item"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer2/HBoxContainer/NextPageButton" to="." method="_on_next_page_button_pressed"]
